ExtHash Done!